# ChangeLog for kde-base/kde-env
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-env/ChangeLog,v 1.36 2009/05/08 10:34:45 scarabeus Exp $

  08 May 2009; Tomas Chvatal <scarabeus@gentoo.org> kde-env-4.2.3:
  Add kdelibs:3.5 blocker to avoid hard blocks.

  07 May 2009; Alexey Shvetsov <alexxy@gentoo.org> kde-env-4.2.3.ebuild:
  fix bug of scarabeus bump tool

*kde-env-4.2.3 (06 May 2009)

  06 May 2009; Tomas Chvatal <scarabeus@gentoo.org> +kde-env-4.2.3.ebuild,
  +metadata.xml:
  Version bump
